# smart-health-template

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1eb6ce8b3384_retirada_de_nome_em_secretaria.py  4f490bc29357_criacao_tabela_ass_medicoesp.py  6ecb7ab6d383_adicionado_role_aos_usuarios.py  7dca82a41257_alter_tabelas_area_medicos.py  96f3aa5c42a3_mudando_role_para_enum.py  9b7a6c5d4e3f_adiciona_pdf_url_em_paciente_exames.py  a4d2b5f1c9e3_adiciona_campos_profissionais_em_usuarios.py  b7c1e4a2d9f0_cria_catalogos_de_exames_e_medicamentos.py  d3b9d5394dd9_init.py  e60a0e5dcb1c_table_associ_medicoesp.py  e8a1c2f4d6b7_expande_pacientes_para_crud_clinico.py  ee80bd636c14_remocao_nome_medico.py  f1a2b3c4d5e6_cria_historico_exames_e_medicamentos_do_paciente.py  fb1f83cf26ab_oncascade_retirado_de_medicos_area_id.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: admin_routes.py  crud_users.py  exam_routes.py  medication_routes.py  medico_esp_routes.py  medico_routes.py  patient_routes.py  secretaria_routes.py  user_route.py  users.py
backend/app/core/: base_exception.py  base_repository.py  db.py  security.py
backend/app/core/exceptions/: client_exceptions.py  user_exceptions.py
backend/app/domains/: __init__.py
backend/app/domains/consultas/: models.py  schemas.py
backend/app/domains/doenca_prontuario/: model.py  schemas.py
backend/app/domains/doencas/: models.py  schemas.py
backend/app/domains/exames/clinicos/: models.py  repository.py  schemas.py  services.py
backend/app/domains/exames/imagem/: models.py  schemas.py
backend/app/domains/habitos_vida/: models.py  schemas.py
backend/app/domains/medicamentos/: medase-workspace.code-workspace  models.py  repository.py  schemas.py  services.py
backend/app/domains/pacientes/: models.py  repository.py  schemas.py  services.py
backend/app/domains/professionals/medico/: models.py  repository.py  schemas.py  services.py
backend/app/domains/professionals/secretaria/: models.py  repository.py  schemas.py  services.py
backend/app/domains/prontuarios/: models.py  schemas.py
backend/app/domains/users/: enums.py  models.py  repository.py  schemas.py  service.py  services.py
backend/app/exames/clinicos/: models.py
backend/app/exames/imagem/: models.py
backend/app/pacientes/: models.py
backend/app/professionals/medico/: models.py  schemas.py
backend/app/professionals/medico/area/: schemas.py
backend/app/professionals/secretaria/: schemas.py
backend/app/users/: models.py
(+19 files in other folders)
