[project]
name = "smarth-health"
version = "0.1.0"
description = "Sistema FastAPI para apoio ao diagnóstico em saúde"
requires-python = ">=3.10,<4.0"

dependencies = [
    # Core
    "fastapi[standard]>=0.114.2,<1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.1,<3.0.0",

    # Web / Forms / Email
    "python-multipart>=0.0.7,<1.0.0",
    "email-validator>=2.1.0.post1,<3.0.0",
    "emails>=0.6,<1.0",
    "jinja2>=3.1.4,<4.0.0",

    # Auth / Security
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt==4.3.0", # pin temporário (compatibilidade com passlib)
    "pyjwt>=2.8.0,<3.0.0",

    # Resiliência / Observabilidade
    "tenacity>=8.2.3,<9.0.0",
    "sentry-sdk[fastapi]>=1.40.6,<2.0.0",

    # HTTP / Integrações
    "httpx>=0.25.1,<1.0.0",

    # Banco de dados
    "sqlalchemy>=2.0,<3.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "alembic>=1.12.1,<2.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",

    # CLI / Config
    "typer>=0.12.0",
    "dynaconf>=3.2.0",
    "python-dotenv>=1.0.0",
]

# ===========================
# Dependency Groups (PEP 735)
# ===========================
[dependency-groups]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "coverage>=7.4.3,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "pre-commit>=3.6.2,<4.0.0",
    "types-passlib>=1.7.7.20240106,<2.0.0.0",
]

# ===========================
# Build system
# ===========================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ===========================
# Mypy
# ===========================
[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

# ===========================
# Ruff
# ===========================
[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments
    "T201",   # print statements
]

ignore = [
    "E501",  # line too long
    "B008",  # function calls in defaults
    "W191",  # tabs
    "B904",  # raise without from
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

# ===========================
# Coverage
# ===========================
[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.hatch.build.targets.wheel]
packages = ["app"]